# AnalisisDeAlgoritmos-Proyecto

./: .gitignore  Makefile  README.md  main.js  package-lock.json  package.json  prueba.html  server.js  webpack.config.js
Clases/: Coordenada.js  Rectangulo.js
PSO_Project/: README.md
PSO_Project/src/: main.cpp
PSO_Project/src/PSO/: PSO.h
PSO_Project/src/Particle/: Particle.h
docs/: index.html
docs/css/: styles.css
docs/js/: bundle.js
public/: Coordenada.js  Rectangulo.js  index.html  main.js
public/js/: bundle.js
src/: app.js  index.html
src-frontend/: bun.lockb  index.html  package.json
src-frontend/css/: index.css
src-frontend/js/: index.js
src-wasm/: .clangd  CMakeLists.txt  README.md
src-wasm/src/: main.cpp
src-wasm/src/FitnessFunction/: BaseFitnessFn.h  CircleArea.cpp  CircleArea.h  FitnessSphere.cpp  FitnessSphere.h  RectangleArea.cpp  RectangleArea.h
src-wasm/src/PSO_wasm/: pso_wasm.cpp  pso_wasm.h
src-wasm/src/Particle/: Particle.cpp
src-wasm/src/WasmFunc/: wasmFunc.cpp  wasmFunc.h
src/js/: Aleatorio.js  Circulo.js  Coordenada.js  PSO.js  Rectangulo.js  UI.js  interfaz.js  simulacion.js
src/styles/: main.scss
src_wasm/: CMakeLists.txt  ejemplo.py
src_wasm/docs/: DiagramClass.md
src_wasm/src/FitnessFunction/: BaseFitnessFn.cpp  BaseFitnessFn.h
src_wasm/src/PSO/: PSO.cpp
webpack/: webpack.config.js
